// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsGroupEdit > renders correctly - with multiple factories and no permission to edit global groups 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-004542b8=""
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: group 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        data-v-004542b8=""
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          data-v-004542b8=""
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="100"
              data-v-004542b8=""
              disabled="true"
              filled="true"
              grow="false"
              hint="Group name"
              id="group-name-field"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Group name"
              required=""
              rules="function () { [native code] }"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              data-v-004542b8=""
              disabled="true"
              hint="Group color in reports"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              data-v-004542b8=""
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 pt-4"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              data-v-004542b8=""
              disabled="true"
              helptext="You don’t have permission to manage global groups"
              id="global-group-toggle"
              maintext="Global group"
              modelvalue="true"
              samelineinput="false"
            />
          </v-col-stub>
          <!--v-if-->
          <!--v-if-->
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-004542b8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-004542b8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-004542b8=""
        disabled="false"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsGroupEdit > renders correctly - with multiple factories and permission to edit global groups 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-004542b8=""
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: group 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        data-v-004542b8=""
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          data-v-004542b8=""
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="100"
              data-v-004542b8=""
              disabled="false"
              filled="true"
              grow="false"
              hint="Group name"
              id="group-name-field"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Group name"
              required=""
              rules="function () { [native code] }"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              data-v-004542b8=""
              disabled="false"
              hint="Group color in reports"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              data-v-004542b8=""
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 pt-4"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              data-v-004542b8=""
              disabled="false"
              helptext="Enable if this group should be available in all factories."
              id="global-group-toggle"
              maintext="Global group"
              modelvalue="true"
              samelineinput="false"
            />
          </v-col-stub>
          <!--v-if-->
          <!--v-if-->
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-004542b8=""
        disabled="false"
        loading="false"
      />
      <v-spacer-stub
        data-v-004542b8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-004542b8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-004542b8=""
        disabled="false"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsGroupEdit > renders correctly - with one or less factory and no permission to edit global groups 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-004542b8=""
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: group 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        data-v-004542b8=""
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          data-v-004542b8=""
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="100"
              data-v-004542b8=""
              disabled="true"
              filled="true"
              grow="false"
              hint="Group name"
              id="group-name-field"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue="comment-group1"
              placeholder="Group name"
              required=""
              rules="function () { [native code] }"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              data-v-004542b8=""
              disabled="true"
              hint="Group color in reports"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              data-v-004542b8=""
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 pt-4"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <!--v-if-->
          </v-col-stub>
          <!--v-if-->
          <!--v-if-->
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-004542b8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-004542b8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-004542b8=""
        disabled="false"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsGroupEdit > renders correctly - with one or less factory and permission to edit global groups 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-004542b8=""
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: group 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        data-v-004542b8=""
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          data-v-004542b8=""
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="100"
              data-v-004542b8=""
              disabled="false"
              filled="true"
              grow="false"
              hint="Group name"
              id="group-name-field"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Group name"
              required=""
              rules="function () { [native code] }"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <color-selection-input-stub
              data-v-004542b8=""
              disabled="false"
              hint="Group color in reports"
              modelvalue=""
              removedcolors="[object Set]"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              data-v-004542b8=""
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 pt-4"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <!--v-if-->
          </v-col-stub>
          <!--v-if-->
          <!--v-if-->
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-004542b8=""
        disabled="false"
        loading="false"
      />
      <v-spacer-stub
        data-v-004542b8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-004542b8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-004542b8=""
        disabled="false"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsGroupEdit > renders correctly with single factory selection if multiple factories available 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-004542b8=""
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      Edit: group 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <v-form-stub
        data-v-004542b8=""
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          data-v-004542b8=""
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="12"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="100"
              data-v-004542b8=""
              disabled="true"
              filled="true"
              grow="false"
              hint="Group name"
              id="group-name-field"
              maxlength="100"
              modelmodifiers="[object Object]"
              modelvalue=""
              placeholder="Group name"
              required=""
              rules="function () { [native code] }"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on-blur=""
            />
          </v-col-stub>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            data-v-004542b8=""
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              data-v-004542b8=""
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="true"
              hint="Factory"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object]"
              itemsecondarytext=""
              itemsmap="[object Object]"
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Factory"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-004542b8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-004542b8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-004542b8=""
        disabled="false"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsGroupEdit > renders correctly with single factory selection if there are not multiple factories available 1`] = `
<form-page-template-stub
  data-v-004542b8=""
  isloading="false"
  primarysegmentsubtitle=""
  primarysegmenttitle="Edit: group 1"
  secondarysegmenticon=""
  secondarysegmentsubtitle="Please add translations"
  secondarysegmenttitle="Translations"
  tertiarysegmenticon=""
  tertiarysegmentsubtitle=""
  tertiarysegmenttitle=""
/>
`;

exports[`SettingsGroupEdit > renders correctly with single factory selection if there are not multiple factories available, but selectedGroupItemsCount is not 0 1`] = `
<form-page-template-stub
  data-v-004542b8=""
  isloading="false"
  primarysegmentsubtitle=""
  primarysegmenttitle="Edit: group 1"
  secondarysegmenticon=""
  secondarysegmentsubtitle="Please add translations"
  secondarysegmenttitle="Translations"
  tertiarysegmenticon=""
  tertiarysegmentsubtitle=""
  tertiarysegmenttitle=""
/>
`;
